@@ -14,6 +14,10 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Allow map relative specification in the PROJ_LIB config item (#3094)
+
+- Try to report reprojection errors in SLD Filter evaluation (#3495)
+
 - Disabled some insecure (and potentially exploitable) mapserv command-line
   debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
   can be used to re-enable them for devs who really cannot get away without
